syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message UpdateWalletRequest {
  int64 balance = 1;
  int64 locked_balance = 2;
  string wallet_id = 3;
}

message UpdateWalletResponse {
  string message = 1;
}